NVDB-475: Minor fixes after code review: Optionally throws exception if TEGNSETT is missing/invalid + Added logging + Discards comments when searching for TEGNSETT + Added unit test

--- a/impl/src/main/resources/no/vegvesen/nvdb/sosi/messages.properties
+++ b/impl/src/main/resources/no/vegvesen/nvdb/sosi/messages.properties
@@ -12,18 +12,10 @@ parser.expected.eof=Expected EOF token, but got {0}
 parser.tokenizer.close.io=I/O error while closing SOSI tokenizer
 parser.invalid.token=Invalid token={0} at {1}. Expected tokens are: {2}
 parser.grammar.headMustBeFirst=File must start with a HODE element
+parser.grammar.missingOrInvalidCharset=The TEGNSETT element is missing or has invalid value
 parser.grammar.invalidConcatenation=Concatenation needs string values on both sides
 parser.grammar.emptyElement=Element has no values or subelements
 parser.grammar.levelLeap=Element level too high
-
-generator.flush.io.err=I/O error while flushing generated SOSI
-generator.close.io.err=I/O error while closing SosiGenerator
-generator.write.io.err=I/O error while writing in SosiGenerator
-generator.illegal.method=Illegal method during SOSI generation, \
-  not valid in current context {0}
-generator.double.infinite.nan=double value cannot be Infinite or NaN
-generator.incomplete.json=Generating incomplete SOSI
-generator.illegal.multiple.text=Cannot generate more than one SOSI text
 
 writer.write.already.called=write/writeObject/writeArray/close method is already called
 
