--- a/impl/src/main/resources/no/vegvesen/nvdb/sosi/messages_nb.properties
+++ b/impl/src/main/resources/no/vegvesen/nvdb/sosi/messages_nb.properties
@@ -12,18 +12,10 @@ parser.expected.eof=Forventet EOF token, men fikk {0}
 parser.tokenizer.close.io=I/O-feil under lukking av SOSI-tokenizer
 parser.invalid.token=Ugyldig token={0} ved {1}. Forventede tokens er: {2}
 parser.grammar.headMustBeFirst=Filen m\u00E5 starte med et HODE-element
+parser.grammar.missingOrInvalidCharset=Elementet TEGNSETT mangler eller har ugyldig verdi
 parser.grammar.invalidConcatenation=Konkatenering krever strengverdier p\u00E5 begge sider
 parser.grammar.emptyElement=Elementet har hverken verdier eller subelementer
 parser.grammar.levelLeap=Elementniv\u00E5et er for h\u00F8yt
-
-generator.flush.io.err=I/O-feil under flushing av generert SOSI
-generator.close.io.err=I/O-feil under lukking av SosiGenerator
-generator.write.io.err=I/O-feil under skriving i SosiGenerator
-generator.illegal.method=Ulovlig metode under SOSI-generering, \
-  ikke gyldig i gjeldende kontekst {0}
-generator.double.infinite.nan=double-verdi kan ikke v\u00E6re Infinite eller NaN
-generator.incomplete.json=Genererer ufullstendig SOSI
-generator.illegal.multiple.text=Kan ikke generere mer enn en SOSI-tekst
 
 writer.write.already.called=Metoden write/writeObject/writeArray/close er allerede kalt
 
