NVDB-772: Supporting different line endings + quoting string values with whitespace only

--- a/impl/src/main/resources/no/vegvesen/nvdb/sosi/messages.properties
+++ b/impl/src/main/resources/no/vegvesen/nvdb/sosi/messages.properties
@@ -1,4 +1,4 @@
-parser.getString.err=SosiParser#getString() is valid only for START_ELEMENT, COMMENT, VALUE_STRING, VALUE_NUMBER, VALUE_SERNO and VALUE_REF parser states. \
+parser.getString.err=SosiParser#getString() is valid only for START_ELEMENT, COMMENT, VALUE_STRING, VALUE_NUMBER, VALUE_SERNO, VALUE_REF and END parser states. \
   But current parser state is {0}
 parser.isIntegralNumber.err=SosiParser#isIntegralNumber() is valid only VALUE_NUMBER, VALUE_SERNO and VALUE_REF parser state. \
   But current parser state is {0}
