--- a/impl/src/main/resources/no/vegvesen/nvdb/sosi/messages_nb.properties
+++ b/impl/src/main/resources/no/vegvesen/nvdb/sosi/messages_nb.properties
@@ -1,4 +1,4 @@
-parser.getString.err=SosiParser#getString() er gyldig bare for parsetilstand START_ELEMENT, COMMENT, VALUE_STRING, VALUE_NUMBER, VALUE_SERNO og VALUE_REF. \
+parser.getString.err=SosiParser#getString() er gyldig bare for parsetilstand START_ELEMENT, COMMENT, VALUE_STRING, VALUE_NUMBER, VALUE_SERNO, VALUE_REF og END. \
   Men gjeldende parsetilstand er {0}
 parser.isIntegralNumber.err=SosiParser#isIntegralNumber() er gyldig bare for parsetilstand VALUE_NUMBER, VALUE_SERNO og VALUE_REF. \
   Men gjeldende parsetilstand er {0}
