NVDB-777: Support for REF elements with islands

--- a/impl/src/main/resources/no/vegvesen/nvdb/sosi/messages.properties
+++ b/impl/src/main/resources/no/vegvesen/nvdb/sosi/messages.properties
@@ -16,6 +16,8 @@ parser.grammar.missingOrInvalidCharset=The TEGNSETT element is missing or has in
 parser.grammar.invalidConcatenation=Concatenation needs string values on both sides
 parser.grammar.emptyElement=Element has no values or subelements
 parser.grammar.levelLeap=Element level too high
+parser.grammar.unmatchedParenthesis=Unmatched parenthesis
+parser.grammar.nestedParentheses=Nested parentheses not allowed
 
 writer.write.already.called=write/writeObject/writeArray/close method is already called
 
