--- a/impl/src/main/resources/no/vegvesen/nvdb/sosi/messages_nb.properties
+++ b/impl/src/main/resources/no/vegvesen/nvdb/sosi/messages_nb.properties
@@ -16,6 +16,8 @@ parser.grammar.missingOrInvalidCharset=Elementet TEGNSETT mangler eller har ugyl
 parser.grammar.invalidConcatenation=Konkatenering krever strengverdier p\u00E5 begge sider
 parser.grammar.emptyElement=Elementet har hverken verdier eller subelementer
 parser.grammar.levelLeap=Elementniv\u00E5et er for h\u00F8yt
+parser.grammar.unmatchedParenthesis=Parenteser m\u00E5 opptre i par
+parser.grammar.nestedParentheses=N\u00F8\stede parenteser er ikke tillatt
 
 writer.write.already.called=Metoden write/writeObject/writeArray/close er allerede kalt
 
